# utah-watchdog

./: .gitignore  GEMINI.md  STREAMLIT_ENHANCEMENT_PLAN.md  TODO.md  TODO_UPDATED.md  connection_string.txt  files_checklist.md  investigate_member_list.py  investigate_senators.py  investigate_without_filter.py  main.py  output.txt  pyproject.toml  test_agent.py  test_force_tools.py  test_research_direct.py  test_tool_calling.py
.github/: copilot-instructions.md
frontend/: app.py
frontend/pages/: 2_📜_Legislation.py  3_🔗_Bills_by_Politician.py  4_🔍_Search_Politicians.py  5_👤_Politician_Detail.py  6_🗳️_Votes.py  6_🗳️_Voting_Records.py  7_📊_Vote_Detail.py  8_💰_Campaign_Finance.py  9_🤖_Ask_AI.py
scripts/: add_utah_fec_ids.py  delete_ut_duplicates.py  enrich_contact_info.py  explore_api.py  explore_api_v2.py  fix_indexes.py  fix_politician_votes_index.py  indexes.py  member_service_history.py  populate_fec_ids.py  populate_fec_ids_from_yaml.py  query_politicians.py  scripts_readme.md  seed_politicians.py  sync_bills_FIXED.py  sync_committees.py  sync_fec_contributions.py  sync_politicians.py  sync_votes.py  sync_votes_v1.py  test_agent.py  test_agent_semantic.py  test_config.py  test_database.py  test_fec_ingester.py  test_legislation_tools.py
scripts/archive/: 2_📜_Legislation.py  fetch_votes.py  find_votes.py  parse_senate_vote.py  sync_bills_org.py
scripts/csv-files/: README.md  ingest_from_csv.py  update_csv_from_api.py  verify_database.py
scripts/dev/: check_connection.py  check_data.py  check_embeddings.py  check_page2.py  check_policy_area.py  debug_curtis.py  (+12 more)
(+41 files in other folders)
